# timer_event

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
src/timer_event/: __init__.py  event.py  event_thread.py  timer_event.py
tests/: __init__.py  test_event.py  test_event_thread.py  test_timer_event.py
