[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timer_event"
version = "0.7.3"
authors = [
  { name="Erol Yesin", email="erol@sandboxzilla.net" },
]
description = "The package offers thread-safe classes for event-driven programming, including a versatile Event class for managing callback routines and a TimerEvent class for creating repeated timer-based events."
readme = "README.md"
requires-python = ">=3.6"
keywords=["event", "thread-safe", "event-driven", "timer-based events", "repeated events", "callback"]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License', 
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erolyesin/timer_event"
"Bug Tracker" = "https://https://github.com/erolyesin/timer_event/issues"
